made header changes

--- a/main_site01.html
+++ b/main_site01.html
@@ -1,4 +1,8 @@
-<!--Author: Caleb Spradlin-->
+<!--
+  --Author: Caleb Spradlin
+  --Version: 0.3 
+  --NM 420 Storymap Project
+-->
 
 <!DOCTYPE html>
 <html>
