Changed caption above map

--- a/main_site01.html
+++ b/main_site01.html
@@ -42,11 +42,12 @@
 
 <div style="position:relative;">
   <div style="color:#ddd;background-color:#282E34;text-align:center;padding:50px 80px;text-align: justify;">
-  <p>Add story here</p>
+  <p  style="text-align: center;">Below is a map showing most accounted migrant deaths in the state of Arizona.</p>
   </div>
 </div>
 
-<div id="mapid"></div>
+<div id="mapid">
+</div>
 <script src="js/map_site00.js"></script>
 
 <div style="position:relative;">
