Chnaged color of inter-story boxes

--- a/main_site01.html
+++ b/main_site01.html
@@ -41,7 +41,7 @@
 </div>
 
 <div style="position:relative;">
-  <div style="color:#ddd;background-color:#282E34;text-align:center;padding:50px 80px;text-align: justify;">
+  <div style="color:#777;background-color:white;text-align:center;padding:50px 80px;text-align: justify;">
   <p  style="text-align: center;">Below is a map showing most accounted migrant deaths in the state of Arizona.</p>
   </div>
 </div>
@@ -51,7 +51,7 @@
 <script src="js/map_site00.js"></script>
 
 <div style="position:relative;">
-  <div style="color:#ddd;background-color:#282E34;text-align:center;padding:50px 80px;text-align: justify;">
+  <div style="color:#777;background-color:white;text-align:center;padding:50px 80px;text-align: justify;">
   <p>Add story here.</p>
   </div>
 </div>
@@ -66,7 +66,7 @@
 </div>
 
 <div style="position:relative;">
-  <div style="color:#ddd;background-color:#282E34;text-align:center;padding:50px 80px;text-align: justify;">
+  <div style="color:#777;background-color:white;text-align:center;padding:50px 80px;text-align: justify;">
   <p>Add story here.</p>
   </div>
 </div>
