Addeed resources and put more touches on sticky elems

--- a/main_site01.html
+++ b/main_site01.html
@@ -34,9 +34,9 @@
 
 </div>
 
-<div class="bgimg-2">
+<div class="trees">
   <div class="caption">
-  <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;">LESS HEIGHT</span>
+  <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7; margin-right: 40%;">LESS HEIGHT</span>
   </div>
 </div>
 
@@ -56,9 +56,9 @@
   </div>
 </div>
 
-<div class="bgimg-1">
+<div class="grande">
   <div class="stickyWrapper">
-    <div class="stickyElement">Add some stuff here<br>And here<br>And here<br>And here...</div>
+    <div class="stickyElementLeft">Story Additive<br>And here<br>And here<br>And here...</div>
   </div>
 </div>
 
@@ -68,7 +68,10 @@
   </div>
 </div>
 
-<div class="bgimg-2">
+<div class="cross">
+  <div class="stickyWrapper">
+    <div class="stickyElementRight">Add some stuff here<br>And here<br>And here<br>And here...</div>
+  </div>
 </div>
 
 <div style="position:relative;">
@@ -77,9 +80,9 @@
   </div>
 </div>
 
-<div class="bgimg-2">
-  <div class="caption">
-  <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;">LESS HEIGHT</span>
+<div class="officer">
+  <div class="caption" style="margin-right: 80%;">
+  <span class="border">Fin</span>
   </div>
 </div>
 <footer></footer>
