Added content, added style to text boxes

--- a/main_site01.html
+++ b/main_site01.html
@@ -26,27 +26,30 @@
   </div>
 </div>
 
-<div style="color: #515151;background-color:white;text-align:center;padding:50px 80px;text-align: justify;">
+<div style="color: #515151;background-color:white;text-align:center;padding:50px 80px;text-align: justify; margin-left: 18%; margin-right: 18%;">
   <h1 style="text-align:center;">Rising death along the U.S/Mexico border</h1>
-  <h4 style="margin-left: 18%; margin-right: 18%;">Put story in here. Nascetur per nec posuere turpis, lectus nec libero turpis nunc at, sed posuere mollis ullamcorper libero ante lectus, blandit pellentesque a, magna turpis est sapien duis blandit dignissim. Viverra interdum mi magna mi, morbi sociis. Condimentum dui ipsum consequat morbi, curabitur aliquam pede, nullam vitae eu placerat eget et vehicula. Varius quisque non molestie dolor, nunc nisl dapibus vestibulum at, sodales tincidunt mauris ullamcorper, dapibus pulvinar, in in neque risus odio. Accumsan fringilla vulputate at quibusdam sociis eleifend, aenean maecenas vulputate, non id vehicula lorem mattis, ratione interdum sociis ornare. Suscipit proin magna cras vel, non sit platea sit, maecenas ante augue etiam maecenas, porta porttitor placerat leo.</h4>
+  <h2 style="font-style: italic;">AJO, Ariz. - &#34A wilderness, in contrast with those areas where man and his works dominate the landscape, is herey recognized as an area where the earth and its comunity of life are untrammeled by man, where man himself is a visitor and who does not remain&#34</h2>
+  <h4>The United States / Mexico border has become a political hotspot of controversy with the Trump Administration&#39s tightening of border security and the oppositions fight to help migrants crossing the border. The border and the land that encompasses it is an unwelcoming place fro migrants. Harsh terrain, extreme temperatures, and vicious border patrol agents operating on zero-tolerance policy make crossing a perilous feat.</h4>
   <img src="img/placeImage.png" class="center">
-  <h4 style="margin-left: 18%; margin-right: 18%;">Put story in here. Nascetur per nec posuere turpis, lectus nec libero turpis nunc at, sed posuere mollis ullamcorper libero ante lectus, blandit pellentesque a, magna turpis est sapien duis blandit dignissim. Viverra interdum mi magna mi, morbi sociis. Condimentum dui ipsum consequat morbi, curabitur aliquam pede, nullam vitae eu placerat eget et vehicula. Varius quisque non molestie dolor, nunc nisl dapibus vestibulum at, sodales tincidunt mauris ullamcorper, dapibus pulvinar, in in neque risus odio. Accumsan fringilla vulputate at quibusdam sociis eleifend, aenean maecenas vulputate, non id vehicula lorem mattis, ratione interdum sociis ornare. Suscipit proin magna cras vel, non sit platea sit, maecenas ante augue etiam maecenas, porta porttitor placerat leo.</h4>
+  <h4>Rather than recognizing that U.S. demand was drawing migrants and crafting proper immigration and labor policy that would take this into account. Instead the U.S. government launched a policy of “prevention by deterrence,” which aimed to make migration so difficult and dangerous that migrants would give up.
+</h4>
 
 </div>
 
 <div class="trees">
   <div class="caption">
-  <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7; margin-right: 40%;">LESS HEIGHT</span>
+  <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7; margin-right: 50%;">LESS HEIGHT</span>
   </div>
 </div>
 
 <div style="position:relative;">
-  <div style="color:#777;background-color:white;text-align:center;padding:50px 80px;text-align: justify;">
-  <p  style="text-align: center;">Below is a map showing most accounted migrant deaths in the state of Arizona.</p>
+  <div style="color:#777;background-color:white;text-align:center;padding:20px 80px;text-align: justify;">
+  <h4 style="text-align: center; margin-left: 18%; margin-right: 18%;">Each point on the map below represents a migrant death in Arizona. Since 1981, more than 3000 deaths have been reported and mapped by the nonprofit Humane Borders and the Pima County Office of the Medical Examiner.<br><br>Click on the numbers to zoom in to find more points<br>Click on the points to examine attributs about each migrant</h4>
   </div>
 </div>
 
 <div id="mapid">
+
 </div>
 <script src="js/map_site00.js"></script>
 
@@ -70,7 +73,7 @@
 
 <div class="cross">
   <div class="stickyWrapper">
-    <div class="stickyElementRight">Add some stuff here<br>And here<br>And here<br>And here...</div>
+    <div class="stickyElementRight">Add some stuff here about some more stuff and stuff<br>And here<br>And here<br>And here...</div>
   </div>
 </div>
 
