--- a/main_site01.html
+++ b/main_site01.html
@@ -30,10 +30,7 @@
   <h1 style="text-align:center;">Rising death along the U.S/Mexico border</h1>
   <h2 style="font-style: italic;">AJO, Ariz. - &#34A wilderness, in contrast with those areas where man and his works dominate the landscape, is herey recognized as an area where the earth and its comunity of life are untrammeled by man, where man himself is a visitor and who does not remain&#34</h2>
   <h4>The United States / Mexico border has become a political hotspot of controversy with the Trump Administration&#39s tightening of border security and the oppositions fight to help migrants crossing the border. The border and the land that encompasses it is an unwelcoming place fro migrants. Harsh terrain, extreme temperatures, and vicious border patrol agents operating on zero-tolerance policy make crossing a perilous feat.</h4>
-  <img src="img/placeImage.png" class="center">
-  <h4>Rather than recognizing that U.S. demand was drawing migrants and crafting proper immigration and labor policy that would take this into account. Instead the U.S. government launched a policy of “prevention by deterrence,” which aimed to make migration so difficult and dangerous that migrants would give up.
-</h4>
-
+  <h4>Rather than recognizing that U.S. demand was drawing migrants and crafting proper immigration and labor policy that would take this into account. Instead the U.S. government launched a policy of “prevention by deterrence,” which aimed to make migration so difficult and dangerous that migrants would give up.</h4>
 </div>
 
 <div class="trees">
@@ -61,14 +58,18 @@
 
 <div class="grande">
   <div class="stickyWrapper">
-    <div class="stickyElementLeft">Story Additive<br>And here<br>And here<br>And here...</div>
+    <div class="stickyElementLeft">The number of migrants dying<br>from extreme heat rose 55 percent<br>in the past 9 months after an<br>increase in unaccompanied children<br>and families trying to enter the U.S. illegally through rough terrain such as the Rio Grande valley</div>
   </div>
 </div>
 
-<div style="position:relative;">
-  <div style="color:#777;background-color:white;text-align:center;padding:50px 80px;text-align: justify;">
-  <p>Add story here.</p>
-  </div>
+<div style="color: #515151;background-color:white;text-align:center;padding:50px 80px;text-align: justify; margin-left: 18%; margin-right: 18%;">
+  <h1 style="text-align:center;">The battle against the helpers</h1>
+  <h2 style="font-style: italic;">Cabeza Prieta National Wildlife Refuge, Ariz. - Four aid workers arrested while attempting to leave water for migrants crossing the border</h2>
+  <h4>In 2018, federal prosecutors in Arizona charged four humanitarian aid workers who left water in the desert for migrants who might otherwise suffer from exposure to the elements and thirst. In another case, the Washington Post reports that federal prosecutors dropped manslaughter charges against a border patrol agent who fired 16 times across the border, killing a Mexican boy. The aid workers face a fine and up to six months in jail. 
+    <br><br>The crimes made by these aid workers: entering the Cabeza Prieta National Wildlife Refuge without permits to leave supplies for migrants crossing into the United States. 
+    <br><br>This is not the first time the U.S. government has come after activists, however the breadth of the campaign against these workers, and the use of the Wilderness act which secured their charges of trespassing was a first. In previous, people wandering around the refuge without proper documents might be sent off with a warning. The Trump administration chose the more severe approach. 
+    <br><br>Parker Deighan, one of the four volunteers awaiting trial on a misdemeanor charge in the United States, told the New York Times, “The cases are on their surface about wilderness. It is about targeting humanitarian aid and targeting care for folks who cross the border. 
+    <br><br>These arrests show a glimpse into a larger problem of the United States Border Patrol’s attempt to curb immigrants entering the United States. Rather than recognizing that U.S. demand was drawing migrants and crafting proper immigration and labor policy that would take this into account. Instead the U.S. government launched a policy of “prevention by deterrence,” which aimed to make migration so difficult and dangerous that migrants would give up. </h4>
 </div>
 
 <div class="cross">
