deleted unnec images, added content

--- a/main_site01.html
+++ b/main_site01.html
@@ -37,7 +37,7 @@
 
 <div class="trees">
   <div class="caption">
-  <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7; margin-right: 50%;">Less</span>
+  <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7; margin-right: 50%;"></span>
   </div>
 </div>
 
@@ -54,7 +54,7 @@
 
 <div style="position:relative;">
   <div style="color:#777;background-color:white;text-align:center;padding:50px 80px;text-align: justify;">
-  <p>Add story here.</p>
+    <p>  </p>
   </div>
 </div>
 
@@ -66,23 +66,26 @@
 
 <div style="position:relative;">
   <div style="color:#777;background-color:white;text-align:center;padding:20px 80px;text-align: justify;">
-  <h2 style="text-align: center; margin-left: 18%; margin-right: 18%;">The battle of the aid workers</h2>
+    <h2 style="text-align: center; margin-left: 18%; margin-right: 18%;" class="title">The battle of the aid workers</h2>
   </div>
 </div>
-
+<div class="merlin"></div>
 
 <div style="color: #515151;background-color:white;text-align:center;padding:50px 80px;text-align: justify; margin-left: 18%; margin-right: 18%;">
   <h2 style="font-style: italic; font-size: 1.0em;">Cabeza Prieta National Wildlife Refuge, Ariz. - Four aid workers arrested while attempting to leave water for migrants crossing the border</h2>
   <h4>In 2018, federal prosecutors in Arizona charged four humanitarian aid workers who left water in the desert for migrants who might otherwise suffer from exposure to the elements and thirst. In another case, the Washington Post reports that federal prosecutors dropped manslaughter charges against a border patrol agent who fired 16 times across the border, killing a Mexican boy. The aid workers face a fine and up to six months in jail. 
     <br><br>The crimes made by these aid workers: entering the Cabeza Prieta National Wildlife Refuge without permits to leave supplies for migrants crossing into the United States. 
-    <br><br>This is not the first time the U.S. government has come after activists, however the breadth of the campaign against these workers, and the use of the Wilderness act which secured their charges of trespassing was a first. In previous, people wandering around the refuge without proper documents might be sent off with a warning. The Trump administration chose the more severe approach. 
-    <br><br>Parker Deighan, one of the four volunteers awaiting trial on a misdemeanor charge in the United States, told the New York Times, “The cases are on their surface about wilderness. It is about targeting humanitarian aid and targeting care for folks who cross the border. 
+    <br><br>This is not the first time the U.S. government has come after activists, however the breadth of the campaign against these workers, and the use of the Wilderness act which secured their charges of trespassing was a first. In previous, people wandering around the refuge without proper documents might be sent off with a warning. The Trump administration chose the more severe approach. </h4>
+    <br><br>
+    <img src="img/nomasmuertos.jpg" alt="No more deaths. Curtesy itsgoingdown.org" class="centerImg">
+    <p style="font-size: 0.5em;">No Mas Muertos. Curtesy of <a href="https://www.itsgoingdown.org">itsgoingdown.org</a></p>
+    <h4><br><br>Parker Deighan, one of the four volunteers awaiting trial on a misdemeanor charge in the United States, told the New York Times, “The cases are on their surface about wilderness. It is about targeting humanitarian aid and targeting care for folks who cross the border. 
     <br><br>These arrests show a glimpse into a larger problem of the United States Border Patrol’s attempt to curb immigrants entering the United States. Rather than recognizing that U.S. demand was drawing migrants and crafting proper immigration and labor policy that would take this into account. Instead the U.S. government launched a policy of “prevention by deterrence,” which aimed to make migration so difficult and dangerous that migrants would give up. </h4>
 </div>
 
 <div class="cross">
   <div class="stickyWrapper">
-    <div class="stickyElementRight">Add some stuff here about some more stuff and stuff<br>And here<br>And here<br>And here...</div>
+    <div class="stickyElementRight">Heat-related deaths, the main cause of migrant fatalities on the U.S. southwest border, rose to 48, up from 31 over the same period in 2017, said U.S. Border Patrol spokesman Salvador Zamora.</div>
   </div>
 </div>
 
