--- a/main_site01.html
+++ b/main_site01.html
@@ -26,7 +26,7 @@
   </div>
 </div>
 
-<div style="color: #515151;background-color:white;text-align:center;padding:50px 80px;text-align: justify; margin-left: 18%; margin-right: 18%;">
+<div class="storyStyle">
   <h1 style="text-align:center;">Rising death along the U.S/Mexico border</h1>
   <h2 style="font-style: italic;">AJO, Ariz. - &#34A wilderness, in contrast with those areas where man and his works dominate the landscape, is herey recognized as an area where the earth and its comunity of life are untrammeled by man, where man himself is a visitor and who does not remain&#34</h2>
   <h4>The United States / Mexico border has become a political hotspot of controversy with the Trump Administration&#39s tightening of border security and the oppositions fight to help migrants crossing the border. The border and the land that encompasses it is an unwelcoming place fro migrants. Harsh terrain, extreme temperatures, and vicious border patrol agents operating on zero-tolerance policy make crossing a perilous feat.</h4>
@@ -42,8 +42,8 @@
 </div>
 
 <div style="position:relative;">
-  <div style="color:#777;background-color:white;text-align:center;padding:20px 80px;text-align: justify;">
-  <h4 style="text-align: center; margin-left: 18%; margin-right: 18%;">Each point on the map below represents a migrant death in Arizona. Since 1981, more than 3000 deaths have been reported and mapped by the nonprofit Humane Borders and the Pima County Office of the Medical Examiner.<br><br>Click on the numbers to zoom in to find more points<br>Click on the points to examine attributs about each migrant</h4>
+  <div class="capSmall">
+    <h4 style="text-align: center; margin-left: 18%; margin-right: 18%;">Each point on the map below represents a migrant death in Arizona. Since 1981, more than 3000 deaths have been reported and mapped by the nonprofit Humane Borders and the Pima County Office of the Medical Examiner.<br><br>Click on the numbers to zoom in to find more points<br>Click on the points to examine attributs about each migrant</h4>
   </div>
 </div>
 
@@ -53,7 +53,7 @@
 <script src="js/map_site00.js"></script>
 
 <div style="position:relative;">
-  <div style="color:#777;background-color:white;text-align:center;padding:50px 80px;text-align: justify;">
+  <div class="capBig">
     <p>  </p>
   </div>
 </div>
@@ -65,13 +65,13 @@
 </div>
 
 <div style="position:relative;">
-  <div style="color:#777;background-color:white;text-align:center;padding:20px 80px;text-align: justify;">
+  <div class="capSmall">
     <h2 style="text-align: center; margin-left: 18%; margin-right: 18%;" class="title">The battle of the aid workers</h2>
   </div>
 </div>
 <div class="merlin"></div>
 
-<div style="color: #515151;background-color:white;text-align:center;padding:50px 80px;text-align: justify; margin-left: 18%; margin-right: 18%;">
+<div class="storyStyle">
   <h2 style="font-style: italic; font-size: 1.0em;">Cabeza Prieta National Wildlife Refuge, Ariz. - Four aid workers arrested while attempting to leave water for migrants crossing the border</h2>
   <h4>In 2018, federal prosecutors in Arizona charged four humanitarian aid workers who left water in the desert for migrants who might otherwise suffer from exposure to the elements and thirst. In another case, the Washington Post reports that federal prosecutors dropped manslaughter charges against a border patrol agent who fired 16 times across the border, killing a Mexican boy. The aid workers face a fine and up to six months in jail. 
     <br><br>The crimes made by these aid workers: entering the Cabeza Prieta National Wildlife Refuge without permits to leave supplies for migrants crossing into the United States. 
@@ -90,7 +90,7 @@
 </div>
 
 <div style="position:relative;">
-  <div style="color:#777;background-color:white;text-align:center;padding:50px 80px;text-align: justify;">
+  <div class="capBig">
   <p>Add story here.</p>
   </div>
 </div>
