changed file paths, should work on produc server

--- a/main_site01.html
+++ b/main_site01.html
@@ -12,8 +12,8 @@
    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.2/dist/leaflet.css" />
    <script src="https://unpkg.com/leaflet@1.0.2/dist/leaflet.js"></script>
    <script src="js/leaflet.geocsv.js"></script>
-   <link rel="stylesheet" href="/css/MarkerCluster.css" />
-   <link rel="stylesheet" href="/css/MarkerCluster.Default.css" />
+   <link rel="stylesheet" href="css/MarkerCluster.css" />
+   <link rel="stylesheet" href="css/MarkerCluster.Default.css" />
    <script src="js/leaflet.markercluster.js"></script>
    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
    <link rel="stylesheet" href="css/main_site01.css" />
