made grammatical fixes

--- a/main_site01.html
+++ b/main_site01.html
@@ -1,7 +1,7 @@
 <!--
-  --Author: Caleb Spradlin
-  --Version: 0.3 
-  --NM 420 Storymap Project
+  Author: Caleb Spradlin
+  Version: 0.3 
+  NM 420 Storymap Project
 -->
 
 <!DOCTYPE html>
@@ -30,14 +30,14 @@
   <h1 style="text-align:center;">Rising death along the U.S/Mexico border</h1>
   
   <h2 style="font-style: italic;">AJO, Ariz. - &#34A wilderness, in contrast with those areas where man and his works
-    dominate the landscape, is herey recognized as an area where the earth and its comunity of life are untrammeled
+    dominate the landscape, is hereby recognized as an area where the earth and it&#39s comunity of life are untrammeled
     by man, where man himself is a visitor and who does not remain&#34
   </h2>
   
   <h4>The United States / Mexico border has become a political hotspot of controversy with the Trump Administration&#39s 
     tightening of border security and the oppositions fight to help migrants crossing the border. The border and the 
     land that encompasses it is an unwelcoming place fro migrants. Harsh terrain, extreme temperatures, and vicious 
-    border patrol agents operating on zero-tolerance policy make crossing a perilous feat.
+    border patrol agents operating on zero-tolerance policy make crossing a perilous feat that leaves many dead in their efforts.
   </h4>
   
     <img src="img/map01.png" alt="Map of US/Mex border. Curtesy Business Insider" class="centerImg">
@@ -46,20 +46,28 @@
   
   <h4>
      Rather than recognizing that U.S. demand was drawing migrants and crafting proper immigration and labor policy
-     that would take this into account. Instead the U.S. government launched a policy of &#34prevention by deterrence,
-     which aimed to make migration so difficult and dangerous that migrants would give up.
+     that would take this into account. Instead, the U.S. government launched a policy of &#34prevention by deterrence&#34,
+     which aimed to make migration so difficult and dangerous that migrants would give up or face the consequences.
   </h4>
 </div>
 
 <div class="trees">
-  <div class="caption">
-  <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7; margin-right: 50%;"></span>
+  <div class="stickyWrapper">
+    <div class="stickyElementWhite">Attempting to evade the Border Patrol and their checkpoints, migrants will travel deeper into the U.S. wilderness making the journey significantly deadlier.</div>
   </div>
 </div>
-
+<!---
+<div class="caption">
+  <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7; margin-right: 50%;"></span>
+  </div>
+-->
 <div style="position:relative;">
   <div class="capSmall">
-    <h4 style="text-align: center; margin-left: 18%; margin-right: 18%;">Each point on the map below represents a migrant death in Arizona. Since 1981, more than 3000 deaths have been reported and mapped by the nonprofit Humane Borders and the Pima County Office of the Medical Examiner.<br><br>Click on the numbers to zoom in to find more points<br>Click on the points to examine attributs about each migrant</h4>
+    <h4 style="text-align: center; margin-left: 18%; margin-right: 18%;">Each point on the map below represents a 
+      migrant death in Arizona. Since 1981, more than 3000 deaths have been reported and mapped by the nonprofit 
+      Humane Borders and the Pima County Office of the Medical Examiner.
+      <br><br>Click on the numbers to zoom in to find more points
+      <br>Click on the points to examine attributs about each migrant</h4>
   </div>
 </div>
 
@@ -69,15 +77,15 @@
 <script src="js/map_site00.js"></script>
 
 <div style="position:relative;">
-  <div class="capBig">
+  <div class="capSmall">
     <p>  </p>
   </div>
 </div>
 
 <div class="grande">
   <div class="stickyWrapper">
-    <div class="stickyElementLeft">The number of migrants dying<br>from extreme heat rose 55 percent<br>in the past 9 
-      ths after an<br>increase in unaccompanied children<br>and families trying to enter the U.S. illegally through 
+    <div class="stickyElementLeft">The number of migrants dying from extreme heat rose 55 percent in the past 9 
+      months after an increase in unaccompanied children and families trying to enter the U.S. illegally through 
       rough terrain such as the Rio Grande valley</div>
   </div>
 </div>
@@ -112,12 +120,12 @@
   <p style="font-size: 0.5em;">No Mas Muertos. Curtesy of <a href="https://www.itsgoingdown.org">itsgoingdown.org</a></p>
 
   <h4><br><br>Parker Deighan, one of the four volunteers awaiting trial on a misdemeanor charge in the United States,
-       told the New York Times, “The cases are on their surface about wilderness. It is about targeting humanitarian 
-       aid and targeting care for folks who cross the border. 
-      <br><br>These arrests show a glimpse into a larger problem of the United States Border Patrol’s attempt to curb 
+       told the New York Times, &#34the cases are on the surface is about wilderness. It is about targeting humanitarian 
+       aid and targeting care for folks who cross the border. &#34
+      <br><br>These arrests show a glimpse into a larger problem of the United States Border Patrol&#39s attempt to curb 
       immigrants entering the United States. Rather than recognizing that U.S. demand was drawing migrants and crafting 
       proper immigration and labor policy that would take this into account. Instead the U.S. government launched a 
-      policy of “prevention by deterrence,” which aimed to make migration so difficult and dangerous that migrants 
+      policy of &#34prevention by deterrence,&#34 which aimed to make migration so difficult and dangerous that migrants 
       would give up. 
   </h4>
 
