added story content

--- a/main_site01.html
+++ b/main_site01.html
@@ -137,17 +137,22 @@
   </div>
 </div>
 
-<div style="position:relative;">
-  <div class="capBig">
-  <p>Add story here.</p>
-  </div>
+<div class="storyStyle">
+  <h4>okpodjwpojdpwoj</h4>
+  <img src="img/bodies-sm.gif" alt="Map of US/Mex border. Curtesy Business Insider" class="centerImg">
 </div>
 
 <div class="officer">
-  <div class="caption" style="margin-right: 80%;">
-  <span class="border">Fin</span>
+  <div class="stickyWrapper">
+    <div class="stickyElementWhite">Attempting to evade the Border Patrol and their checkpoints, migrants will travel deeper into the U.S. wilderness making the journey significantly deadlier.</div>
   </div>
 </div>
-<footer></footer>
+
+<div class="storyStyle">
+  <h1>How You Can Help</h1>
+  <h3>A battle over the future is being waged in the capitol, largely by people who do not understand the implications or stopped to consider the impacts of a &#34zero-tolerance&#34 border. You ca be a voice for the borderlands.</h3>
+  <h2>Call your representative and senators-</h2>
+  <br><h3>Urge them to oppose the current state of emergency over the lack of borderwall funding.</h3>
+</div>
 </body>
 </html>
