added ending photos

--- a/main_site01.html
+++ b/main_site01.html
@@ -27,7 +27,7 @@
 </div>
 
 <div class="storyStyle">
-  <h1 style="text-align:center;">Rising death along the U.S/Mexico border</h1>
+  <h3 style="text-align:center; font-size: 1.8em;">Rising death along the U.S/Mexico border</h3>
   
   <h2 style="font-style: italic;">AJO, Ariz. - &#34A wilderness, in contrast with those areas where man and his works
     dominate the landscape, is hereby recognized as an area where the earth and it&#39s comunity of life are untrammeled
@@ -92,7 +92,7 @@
 
 <div style="position:relative;">
   <div class="capSmall">
-    <h2 style="text-align: center; margin-left: 18%; margin-right: 18%;" class="title">The battle of the aid workers</h2>
+    <h3 style="text-align: center; margin-left: 10%; margin-right: 10%;" class="title">The battle of the aid workers</h3>
   </div>
 </div>
 <div class="merlin"></div>
@@ -138,21 +138,25 @@
 </div>
 
 <div class="storyStyle">
-  <h4>okpodjwpojdpwoj</h4>
+  <h3>Migrant death rising</h3>
+  <p style="font-style: regular;">This map shows the migrant body discovery through the years of 2001 and 2018</p>
+  <br><br>
   <img src="img/bodies-sm.gif" alt="Map of US/Mex border. Curtesy Business Insider" class="centerImg">
+  <p style="font-size: 0.5em;"> Curtesy of Reuters</p>
 </div>
 
-<div class="officer">
+<div class="crossing">
   <div class="stickyWrapper">
-    <div class="stickyElementWhite">Attempting to evade the Border Patrol and their checkpoints, migrants will travel deeper into the U.S. wilderness making the journey significantly deadlier.</div>
+    <div class="stickyElementRight">The lives of these migrants cannot be forgotten. The tightening security around the border is pushing migrants into deadly lands not fit for human travel.</div>
   </div>
 </div>
 
 <div class="storyStyle">
   <h1>How You Can Help</h1>
-  <h3>A battle over the future is being waged in the capitol, largely by people who do not understand the implications or stopped to consider the impacts of a &#34zero-tolerance&#34 border. You ca be a voice for the borderlands.</h3>
-  <h2>Call your representative and senators-</h2>
-  <br><h3>Urge them to oppose the current state of emergency over the lack of borderwall funding.</h3>
+  <h2>A battle over the future is being waged in the capitol, largely by people who do not understand the implications or stopped to consider the impacts of a &#34zero-tolerance&#34 border. You ca be a voice for the borderlands.</h2>
+  <br><br>
+  <h2>Call your representative and senators</h2>
+  <h4>Urge them to oppose the current state of emergency over the lack of borderwall funding.</h4>
 </div>
 </body>
 </html>
