changed name to index

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 <div class="trees">
   <div class="stickyWrapper">
-    <div class="stickyElementWhite">Attempting to evade the Border Patrol and their checkpoints, migrants will travel deeper into the U.S. wilderness making the journey significantly deadlier.</div>
+    <div class="stickyElementLeft">Attempting to evade the Border Patrol and their checkpoints, migrants will travel deeper into the U.S. wilderness making the journey significantly deadlier.</div>
   </div>
 </div>
 <!---
