added final touches

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
   <h4>In 2018, federal prosecutors in Arizona charged four humanitarian aid workers who left water in the desert for 
       migrants who might otherwise suffer from exposure to the elements and thirst. In another case, the Washington Post reports that federal prosecutors dropped manslaughter charges against a border patrol agent who fired 16 times across the border, killing a Mexican boy. The aid workers face a fine and up to six months in jail. 
       <br><br>The crimes made by these aid workers: entering the Cabeza Prieta National Wildlife Refuge without permits 
-      o leave supplies for migrants crossing into the United States. 
+      to leave supplies for migrants crossing into the United States. 
       <br><br>This is not the first time the U.S. government has come after activists, however the breadth of the 
       campaign against these workers, and the use of the Wilderness act which secured their charges of trespassing 
       was a first. In previous, people wandering around the refuge without proper documents might be sent off with a 
